# amazon-ads-review-agent

./: .env.example  .gitignore  README.md  category_thresholds.yaml  pyproject.toml
.specify/memory/: constitution.md
specs/001-ads-review-agent/: plan.md  spec.md  tasks.md
src/ads_agent/: __init__.py  approve.py  backtest.py  collect.py  config.py  diagnose.py  execute.py  metrics.py  models.py  orchestrator.py  report.py  strategies.py  suggest.py
tests/: conftest.py  test_approve.py  test_backtest.py  test_diagnose.py  test_metrics.py  test_orchestrator.py  test_suggest.py
