[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-ads-review-agent"
version = "0.1.0"
description = "Amazon 广告复盘 Agent — 自动拉报表、诊断异常、给调价与否定词建议（可验证可复盘）"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]
[project.optional-dependencies]
test = ["pytest>=8", "respx>=0.20"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
